--- a/blog/templates/admin/menu.html
+++ b/blog/templates/admin/menu.html
@@ -24,8 +24,8 @@
       </div>
       <div>
       	<span>用户</span>
-      	<a href="">作者和用户</a>
-      	<a href="">我的配置</a>
+      	<a href="/admin/auth/user">作者和用户</a>
+      	<a href="/admin/auth/user/{{request.user.id}}">我的配置</a>
       </div>
       <div>
       	<span>工具</span>
