--- a/blog/templates/admin/base.html
+++ b/blog/templates/admin/base.html
@@ -11,6 +11,7 @@
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% admin_media_prefix %}{% endfilter %}";</script>
 {% block extrahead %}{% endblock %}
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
+<link rel="stylesheet" href="/static/admin.css" type="text/css" media="screen"/>
 </head>
 {% load i18n %}
 
