--- a/blog/templates/admin/base_site.html
+++ b/blog/templates/admin/base_site.html
@@ -5,9 +5,7 @@
 
 {% block branding %}
 <h1 id="site-name">
-<a href="/" target="_blank">
-{{blog.blogtitle}} <span>← 查看站点</span>
-</a>
+LogPress 站点管理
 </h1>
 {% endblock %}
 
