--- a/blog/templates/admin/menu.html
+++ b/blog/templates/admin/menu.html
@@ -33,7 +33,7 @@
       </div>
       <div>
         <span>设置</span>
-			<a href="">常规</a>
+			<a href="{%url settings%}">常规</a>
 			<a href="">评论</a>
 			<a href="">固定链接</a>
       </div>
