--- a/blog/templates/themes/classic/single.html
+++ b/blog/templates/themes/classic/single.html
@@ -1,5 +1,5 @@
 {% extends "themes/classic/base.html" %}
-{% block title %} {{post.title|escape}} - {{blog.blogtitle|escape}} {% endblock %}
+{% block title %} {{post.title|escape}} - {% endblock %}
 {% block head_block %}
 
 {%if post %}
