--- a/blog/templates/themes/classic/base.html
+++ b/blog/templates/themes/classic/base.html
@@ -3,13 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head profile="http://gmpg.org/xfn/11">
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<title>{% block title %} {{ blog.blogtitle|escape}}{% endblock %}</title>
-	<link rel="alternate" type="application/atom+xml" title="{{ blog.title }} atom" href="{%url atom%}" />
-	<link rel="alternate" type="application/rss+xml" title="{{ blog.title }} rss" href="{%url feed_post%}" />
-	<link rel="stylesheet" href="/themes/{{ blog.theme_name }}/style.css" type="text/css" media="screen"/>
+	<meta name="google-site-verification" content="ugTlvqgsh2e1_b5xjYsrWg3vGlZuaLQfq7sKfmHJ_b8" />
+	<meta name="robots" content="noindex,nofollow" />
+	<title>{% block title %} {% endblock %} {{ settings.BLOG_NAME|escape}}</title>
+	<meta name="Keywords" content="{{settings.BLOG_SITE_KEYWORDS|escape}}" />
+	<meta name="Description" content="{{settings.BLOG_SITE_DESCRIPTION|escape}}" />
+	<link rel="alternate" type="application/atom+xml" title="{{ settings.BLOG_NAME }} atom" href="{%url atom%}" />
+	<link rel="alternate" type="application/rss+xml" title="{{ settings.BLOG_NAME }} rss" href="{%url feed_post%}" />
+	<link rel="stylesheet" href="/themes/{{ theme }}/style.css" type="text/css" media="screen"/>
 	<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<link href="/static/prettify.css" type="text/css" rel="stylesheet" />
 	<script type="text/javascript" src="/static/js/prettify.js"></script>
+	<link rel="EditURI" type="application/rsd+xml" title="RSD" href="{%url xmlrpc %}" />
 	{% block head %}{% endblock %}
 </head>
 
@@ -18,7 +23,7 @@
 <div id="wrapper">
 
 	<header>
-		<h1 id="logo"><a href="/">{{ blog.blogtitle}}</a> <span>{{ blog.subtitle|escape}}</span></h1>
+		<h1 id="logo"><a href="/">{{ settings.BLOG_NAME}}</a> <span>{{ settings.BLOG_SUB_NAME|escape}}</span></h1>
 		<nav>
 			<ul id="nav">
 				<li class="home {%if ishome%}current_page_item{%else%}page_item{%endif%}">
